getting rid of the getIndex controller  at the momment
