# routes/shop.js
@@ -11,9 +11,9 @@ const isAuth = require('../middleware/is-auth.js');
 const router = express.Router();
 
 
-router.get( '/', shopController.getIndex );
-
-router.get( '/products', shopController.getProducts );
+// router.get( '/', shopController.getIndex );
+// router.get( '/products', shopController.getProducts );
+router.get(['/', '/products'], shopController.getProducts);
 
 router.get( '/products/:productId', shopController.getProduct );
 
