# swagger.yaml
@@ -263,49 +263,6 @@ paths:
                 $ref: '#/components/schemas/Error'
 
 
-  /products:
-
-    get:
-      tags:
-        - Shop
-
-      summary: Get paginated products
-
-      description: |
-        Returns a paginated list of products.
-
-        The page number can be provided using the `page` query parameter.
-
-        If no page is provided, page 1 is used.
-
-      parameters:
-
-        - name: page
-          in: query
-          required: false
-          description: Page number
-          schema:
-            type: integer
-            minimum: 1
-            default: 1
-          example: 1
-
-      responses:
-
-        '200':
-          description: Products fetched successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductsResponse'
-
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
 
   /products/{productId}:
 
